# somm

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  RELEASING.md  ROADMAP.md  TODOS.md  pyproject.toml
docs/: BLUEPRINT.md  index.html  intel-sources.md  multimodal.md  style.css
docs/errors/: SOMM_NO_CAPABLE_PROVIDER.md  SOMM_PORT_BUSY.md  SOMM_PRIVACY_VIOLATION.md  SOMM_PROVIDERS_EXHAUSTED.md  SOMM_SCHEMA_STALE.md  SOMM_WORKLOAD_UNREGISTERED.md  index.html
examples/: README.md  drop_in_wrapper.py  openai_swap_in.py  private_workload.py
tests/: test_blocklist.py  test_pricing_safety.py
